name: volare
version: 0.0.1
license: BSD3
license-file: LICENSE
author: snak
maintainer: snak
category: Web
stability: Experimental
cabal-version: >= 1.16
build-type: Custom
homepage: http://github.com/snakamura/volare

Flag dev
    Default: False

Flag library-only
    Default: False

Flag glibcxx
    Default: False

library
    exposed-modules: Codec.GeoWpt
                     Codec.IGC
                     Codec.Utils.Attoparsec
                     Codec.Utils.Pipes
                     Service.AMEDAS
                     Service.MSM
                     Service.MSM.Barometric
                     Service.MSM.Surface
                     Service.WINDAS
                     Volare.Application
                     Volare.Config
                     Volare.Domain
                     Volare.Model
                     Volare.Settings
    other-modules: Codec.GeoWpt.Parser
                   Codec.GeoWpt.Types
                   Codec.IGC.Parser
                   Codec.IGC.Types
                   Codec.IGC.Utils
                   Service.AMEDAS.Stations
                   Service.AMEDAS.Types
                   Service.WINDAS.Parser
                   Service.WINDAS.Stations
                   Service.WINDAS.Types
                   Volare.Domain.Flight
                   Volare.Domain.Route
                   Volare.Domain.Types
                   Volare.Domain.Waypoint
                   Volare.Domain.Workspace
                   Volare.Foundation
                   Volare.Model.Settings
                   Volare.Handler.AMEDAS
                   Volare.Handler.Flight
                   Volare.Handler.MSM
                   Volare.Handler.Root
                   Volare.Handler.Route
                   Volare.Handler.Utils
                   Volare.Handler.Waypoint
                   Volare.Handler.WINDAS
                   Volare.Handler.Workspace
                   Volare.Static
                   Volare.Widget

    hs-source-dirs: src
    includes: msm.h
    include-dirs: msm
    if flag(glibcxx)
        extra-libraries: msm, netcdf, stdc++
    else
        extra-libraries: msm, netcdf, c++
    extra-lib-dirs: /usr/lib, /usr/local/lib

    default-language: Haskell2010
    default-extensions: CPP
                        DeriveDataTypeable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ForeignFunctionInterface
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        NoMonomorphismRestriction
                        OverlappingInstances
                        OverloadedStrings
                        PatternGuards
                        QuasiQuotes
                        RankNTypes
                        ScopedTypeVariables
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        UndecidableInstances
                        ViewPatterns

    build-depends: aeson == 0.8.*,
                   async == 2.0.*,
                   attoparsec == 0.12.*,
                   base == 4.*,
                   bifunctors == 4.2.*,
                   blaze-html == 0.7.*,
                   blaze-markup == 0.6.*,
                   bytestring == 0.10.*,
                   clientsession == 0.9.*,
                   containers == 0.5.*,
                   conduit == 1.2.*,
                   conduit-extra == 1.1.*,
                   data-default == 0.5.*,
                   directory == 1.2.*,
                   exceptions == 0.6.*,
                   filepath == 1.3.*,
                   formatting == 5.4.*,
                   http-client == 0.4.*,
                   http-types == 0.8.*,
                   lens-family == 1.1.*,
                   lifted-base == 0.2.*,
                   monad-control == 0.3.*,
                   monad-logger == 0.3.*,
                   old-locale == 1.0.*,
                   path-pieces == 0.1.*,
                   persistent == 2.1.*,
                   persistent-postgresql == 2.1.*,
                   persistent-template == 2.1.*,
                   pipes == 4.1.*,
                   pipes-attoparsec == 0.5.*,
                   pipes-bytestring == 2.1.*,
                   pipes-zlib == 0.4.*,
                   pipes-http >= 1.0.1 && < 1.1,
                   pipes-parse == 3.0.*,
                   resourcet == 1.1.*,
                   safe == 0.3.*,
                   shakespeare == 2.0.*,
                   shakespeare-i18n == 1.1.*,
                   shakespeare-js == 1.3.*,
                   split == 0.2.*,
                   tagsoup == 0.13.*,
                   tar == 0.4.*,
                   template-haskell == 2.9.*,
                   temporary == 1.2.*,
                   text == 1.2.*,
                   time == 1.4.*,
                   transformers == 0.3.*,
                   unordered-containers == 0.2.*,
                   utf8-string == 0.3.*,
                   utility-ht == 0.0.*,
                   wai == 3.0.*,
                   wai-extra == 3.0.*,
                   warp == 3.0.*,
                   yaml == 0.8.*,
                   yesod == 1.4.*,
                   yesod-core == 1.4.*,
                   yesod-form == 1.4.*,
                   yesod-persistent == 1.4.*,
                   yesod-static == 1.4.*

    if flag(dev) || flag(library-only)
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -Werror -O0
    else
        ghc-options: -Wall -Werror -O2

executable volare
    if flag(library-only)
        Buildable: False

    main-is: ../src/main.hs
    hs-source-dirs: dist

    default-language: Haskell2010

    build-depends: base == 4.*,
                   yesod == 1.4.*,
                   volare

    ghc-options: -Wall -Werror -threaded -O2

test-suite doctest
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: doctest.hs

    default-language: Haskell2010

    build-depends: base == 4.*,
                   doctest >= 0.9.11

    ghc-options: -Wall -Werror -threaded -O0

test-suite spec
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: spec.hs

    default-language: Haskell2010
    default-extensions: CPP
                        DeriveDataTypeable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ForeignFunctionInterface
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        MultiParamTypeClasses
                        NoMonomorphismRestriction
                        OverlappingInstances
                        OverloadedStrings
                        QuasiQuotes
                        ScopedTypeVariables
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        UndecidableInstances

    build-depends: attoparsec == 0.12.*,
                   base == 4.*,
                   bytedump == 1.*,
                   bytestring == 0.10.*,
                   cryptohash == 0.11.*,
                   hspec == 1.12.*,
                   HUnit == 1.2.*,
                   monad-logger == 0.3.*,
                   persistent == 2.1.*,
                   pipes == 4.1.*,
                   pipes-attoparsec == 0.5.*,
                   pipes-bytestring == 2.1.*,
                   resourcet == 1.1.*,
                   temporary == 1.2.*,
                   time == 1.4.*,
                   transformers == 0.3.*,
                   volare,
                   yesod == 1.4.*

    ghc-options: -Wall -Werror -threaded -O0
