name: volare
version: 0.0.1
license: BSD3
license-file: LICENSE
author: snak
maintainer: snak
category: Web
stability: Experimental
cabal-version: >= 1.24
build-type: Custom
homepage: http://github.com/snakamura/volare

Flag dev
    Default: False

Flag library-only
    Default: False

Flag glibcxx
    Default: False

Flag stack
    Default: False

custom-setup
    setup-depends: base == 4.11.*,
                   Cabal == 2.2.*,
                   directory == 1.3.*

library
    exposed-modules: Codec.GeoWpt
                     Codec.IGC
                     Codec.Utils.Attoparsec
                     Codec.Utils.Pipes
                     Service.AMEDAS
                     Service.MSM
                     Service.MSM.Barometric
                     Service.MSM.Surface
                     Service.UAS
                     Service.WINDAS
                     Volare.Application
                     Volare.Domain
                     Volare.Model
                     Volare.Settings
    other-modules: Codec.GeoWpt.Parser
                   Codec.GeoWpt.Types
                   Codec.IGC.Parser
                   Codec.IGC.Types
                   Codec.IGC.Utils
                   Service.AMEDAS.Stations
                   Service.AMEDAS.Types
                   Service.UAS.Parser
                   Service.UAS.Stations
                   Service.UAS.Types
                   Service.WINDAS.Parser
                   Service.WINDAS.Stations
                   Service.WINDAS.Types
                   Volare.Domain.Flight
                   Volare.Domain.Route
                   Volare.Domain.Types
                   Volare.Domain.Waypoint
                   Volare.Domain.Workspace
                   Volare.Foundation
                   Volare.Model.Settings
                   Volare.Handler.AMEDAS
                   Volare.Handler.Flight
                   Volare.Handler.Forcast
                   Volare.Handler.MSM
                   Volare.Handler.MSM.Timestamp
                   Volare.Handler.Root
                   Volare.Handler.Route
                   Volare.Handler.UAS
                   Volare.Handler.Utils
                   Volare.Handler.Waypoint
                   Volare.Handler.WINDAS
                   Volare.Handler.Workspace
                   Volare.Static
                   Volare.Widget

    hs-source-dirs: src
    includes: msm.h
    include-dirs: msm

    default-language: Haskell2010
    default-extensions: CPP
                        DeriveDataTypeable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ForeignFunctionInterface
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        MultiParamTypeClasses
                        NoMonomorphismRestriction
                        OverloadedStrings
                        PatternGuards
                        QuasiQuotes
                        RankNTypes
                        ScopedTypeVariables
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        UndecidableInstances
                        ViewPatterns

    build-depends: aeson == 1.3.*,
                   async == 2.2.*,
                   attoparsec == 0.13.*,
                   base == 4.11.*,
                   bifunctors == 5.*,
                   blaze-html == 0.9.*,
                   bytestring == 0.10.*,
                   clientsession == 0.9.*,
                   containers == 0.5.*,
                   data-default == 0.7.*,
                   directory == 1.3.*,
                   exceptions == 0.10.*,
                   filepath == 1.4.*,
                   formatting == 6.3.*,
                   http-client == 0.5.*,
                   http-types == 0.12.*,
                   lens-family == 1.2.*,
                   monad-logger == 0.3.*,
                   path-pieces == 0.2.*,
                   persistent == 2.8.*,
                   persistent-postgresql == 2.8.*,
                   persistent-template == 2.5.*,
                   pipes == 4.3.*,
                   pipes-attoparsec == 0.5.*,
                   pipes-bytestring == 2.1.*,
                   pipes-zlib == 0.4.*,
                   pipes-http == 1.0.*,
                   pipes-parse == 3.0.*,
                   safe == 0.3.*,
                   shakespeare == 2.0.*,
                   split == 0.2.*,
                   tagsoup == 0.14.*,
                   tar == 0.5.*,
                   template-haskell == 2.13.*,
                   temporary == 1.3.*,
                   text == 1.2.*,
                   time == 1.8.*,
                   transformers == 0.5.*,
                   unordered-containers == 0.2.*,
                   utf8-string == 1.*,
                   utility-ht == 0.0.*,
                   wai == 3.2.*,
                   wai-extra == 3.0.*,
                   warp == 3.2.*,
                   yaml == 0.8.*,
                   yesod == 1.6.*,
                   yesod-core == 1.6.*,
                   yesod-form == 1.6.*,
                   yesod-persistent == 1.6.*,
                   yesod-static == 1.6.*

    if flag(dev) || flag(library-only)
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -Werror -O0 -Wno-redundant-constraints
    else
        ghc-options: -Wall -Werror -O2 -Wno-redundant-constraints

executable volare
    if flag(library-only)
        Buildable: False

    main-is: src/main.hs
    hs-source-dirs: .
    extra-libraries: msm
    extra-lib-dirs: /usr/lib, /usr/local/lib

    default-language: Haskell2010

    build-depends: base == 4.11.*,
                   yesod == 1.6.*,
                   warp == 3.2.*,
                   volare
    if flag(stack)
        if os(darwin)
            ghc-options: -Wall -Werror -threaded -O2 -optl-Wl,-rpath,@executable_path/../../../../../../msm/lib
        else
            ghc-options: -Wall -Werror -threaded -O2 -optl-Wl,-rpath,$ORIGIN/../../../../../../msm/lib
    else
        if os(darwin)
            ghc-options: -Wall -Werror -threaded -O2 -optl-Wl,-rpath,@executable_path/../../../msm/lib
        else
            ghc-options: -Wall -Werror -threaded -O2 -optl-Wl,-rpath,$ORIGIN/../../../msm/lib

test-suite doctest
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: doctest.hs

    default-language: Haskell2010

    build-depends: base == 4.11.*,
                   doctest == 0.16.*

    ghc-options: -Wall -Werror -threaded -O0

test-suite spec
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: spec.hs
    extra-libraries: msm
    extra-lib-dirs: /usr/lib, /usr/local/lib

    other-modules: AMEDASSpec
                   DomainSpec
                   GeoWptSpec
                   IGCSpec
                   MSMSpec
                   SpecUtils
                   UASSpec
                   WINDASSpec

    default-language: Haskell2010
    default-extensions: CPP
                        DeriveDataTypeable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ForeignFunctionInterface
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        MultiParamTypeClasses
                        NoMonomorphismRestriction
                        OverloadedStrings
                        QuasiQuotes
                        ScopedTypeVariables
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        UndecidableInstances

    build-depends: attoparsec == 0.13.*,
                   base == 4.11.*,
                   bytestring == 0.10.*,
                   cryptohash == 0.11.*,
                   foldl == 1.4.*,
                   hspec == 2.5.*,
                   http-client == 0.5.*,
                   HUnit == 1.6.*,
                   ieee754 == 0.8.*,
                   monad-logger == 0.3.*,
                   persistent == 2.8.*,
                   pipes == 4.3.*,
                   pipes-attoparsec == 0.5.*,
                   pipes-bytestring == 2.1.*,
                   resourcet == 1.2.*,
                   temporary == 1.3.*,
                   time == 1.8.*,
                   transformers == 0.5.*,
                   volare,
                   yesod == 1.6.*

    if flag(stack)
        if os(darwin)
            ghc-options: -Wall -Werror -threaded -O0 -optl-Wl,-rpath,@executable_path/../../../../../../msm/lib
        else
            ghc-options: -Wall -Werror -threaded -O0 -optl-Wl,-rpath,$ORIGIN/../../../../../../msm/lib
    else
        if os(darwin)
            ghc-options: -Wall -Werror -threaded -O0 -optl-Wl,-rpath,@executable_path/../../../msm/lib
        else
            ghc-options: -Wall -Werror -threaded -O0 -optl-Wl,-rpath,$ORIGIN/../../../msm/lib
